# cfd-core

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
orchestrator/: evaluate.py  requirements.txt  schemas.py  study.py
scripts/: build.sh
src/: bc.hpp  grid.hpp  io.cpp  io.hpp  main.cpp  numerics.hpp  solver.cpp  solver.hpp  state.hpp
tests/: test_solver.cpp
